# MST-Bin_pastebin

./: .gitignore  AGENTS.md  Dockerfile  README.md  app.py  docker-compose.yaml  env_sample  pyproject.toml
public/css/: styles.css
public/js/: script.js
templates/: index.html  paste.html
