[project]
name = "mst-bin-pastebin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aniso8601==9.0.1",
    "apscheduler==3.11.1",
    "blinker==1.9.0",
    "click==8.1.7",
    "dnspython==2.7.0",
    "flask==3.1.0",
    "flask-restful==0.3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "markupsafe==3.0.2",
    "pymongo==4.10.1",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "six==1.16.0",
    "tzlocal==5.3.1",
    "werkzeug==3.1.3",
]
